[css-flexbox] `gap` does not work correctly when `flex-direction: column-reverse` is applied https://bugs.webkit.org/show_bug.cgi?id=225278 Source/WebCore:

rdar://problem/77708991

Patch by Vitaly Dyachkov <obyknovenius@me.com> on 2021-12-08
Reviewed by Sergio Villar Senin.

Whenever flex-direction: column-reverse is specified flexbox does always compute the flex item sizes and positions
ignoring the -reverse direction until the very end. After completing the computations we just need to swap offsets
to get the reversed positions. The code was properly considering space between items added by content justification
but it was not adding gaps. Fixed it by adding the gap size to the flex items' offsets.

Test: imported/w3c/web-platform-tests/css/css-flexbox/column-reverse-gap.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
(WebCore::RenderFlexibleBox::layoutColumnReverse):
* rendering/RenderFlexibleBox.h:

LayoutTests:

Patch by Vitaly Dyachkov <obyknovenius@me.com> on 2021-12-08
Reviewed by Sergio Villar Senin.

* imported/w3c/web-platform-tests/css/css-flexbox/column-reverse-gap-expected.txt: Added.
* imported/w3c/web-platform-tests/css/css-flexbox/column-reverse-gap.html: Added.


Canonical link: https://commits.webkit.org/244967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286654 268f45cc-cd09-0410-ab3c-d52691b4dbfc